# tx3-hydra

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: build.yml
examples/basic/: README.md  config.toml
examples/vending-machine/: README.md  docker-compose.yml  package-lock.json
examples/vending-machine/chain/: protocol-parameters.json  tx3.toml  utxo.json
examples/vending-machine/chain/cardano/: user.addr  user.sk  vm.addr  vm.sk  vm.vk
examples/vending-machine/chain/hydra/: user.sk  user.vk
examples/vending-machine/chain/hydra-node-1/: tx3.toml
examples/vending-machine/chain/hydra-node-1/cardano/: user.vk
examples/vending-machine/chain/hydra-node-2/: tx3.toml  utxo.json
examples/vending-machine/chain/hydra-node-2/cardano/: user.addr  user.sk  user.vk
examples/vending-machine/chain/hydra-node-2/hydra/: user.sk  user.vk
examples/vending-machine/tx3/: main.tx3  trix.toml
examples/vending-machine/web/: .env  .gitignore  Dockerfile  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
examples/vending-machine/web/app/: app.css  root.tsx  routes.ts  sessions.server.ts  utils.ts
examples/vending-machine/web/app/@types/: cardano.ts
examples/vending-machine/web/app/routes/: api.pay.ts  api.register.ts  home.tsx
examples/vending-machine/web/app/tx3/: package-lock.json  (+2 more)
src/: main.rs  methods.rs
src/hydra/: data.rs  event.rs  mod.rs  model.rs
src/trp/: inputs.rs  ledger.rs  mapping.rs  methods.rs  mod.rs  utxos.rs
src/trp/methods/: health.rs  mod.rs  resolve.rs  submit.rs
src/trp/test_data/: utxos.json
(+5 files in other folders)
